--- a/Avalonia_Apps/AA15_Labyrinth/AA15a_Treppen/AA15a_Treppen.csproj
+++ b/Avalonia_Apps/AA15_Labyrinth/AA15a_Treppen/AA15a_Treppen.csproj
@@ -36,4 +36,13 @@
     <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
     <ProjectReference Include="..\Treppen.Base\Treppen.Base.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Update="Avalonia" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Desktop" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Diagnostics" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Fonts.Inter" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Themes.Fluent" Version="11.3.9" />
+    <PackageVersion Update="System.Drawing.Common" Version="10.0.0" />
+  </ItemGroup>
 </Project>
