--- a/Avalonia_Apps/AA15_Labyrinth/AA15_Labyrinth/AA15_Labyrinth.csproj
+++ b/Avalonia_Apps/AA15_Labyrinth/AA15_Labyrinth/AA15_Labyrinth.csproj
@@ -23,4 +23,11 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageVersion Update="Avalonia" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Desktop" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Fonts.Inter" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Themes.Fluent" Version="11.3.9" />
+	</ItemGroup>
 </Project>
