--- a/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol2/AA16_UserControl2.csproj
+++ b/Avalonia_Apps/AA16_UserControl/AA16_Usercontrol2/AA16_UserControl2.csproj
@@ -25,4 +25,11 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageVersion Update="Avalonia" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Desktop" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Diagnostics" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Fonts.Inter" Version="11.3.9" />
+	  <PackageVersion Update="Avalonia.Themes.Fluent" Version="11.3.9" />
+	</ItemGroup>
 </Project>
