--- a/Avalonia_Apps/AA22_AvlnCap/AA22_AvlnCap/AA22_AvlnCap.csproj
+++ b/Avalonia_Apps/AA22_AvlnCap/AA22_AvlnCap/AA22_AvlnCap.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Avalonia" />
     <PackageReference Include="Avalonia.Desktop" />
     <PackageReference Include="Avalonia.Themes.Fluent" />
-    <PackageReference Include="Avalonia.Fonts.Inter"/>   
+    <PackageReference Include="Avalonia.Fonts.Inter" />   
     <PackageReference Include="Avalonia.Diagnostics" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Avalonia.ReactiveUI" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
@@ -38,6 +38,26 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\Avln_BaseLib\Avln_BaseLib.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Update="Avalonia" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Desktop" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Diagnostics" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Fonts.Inter" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Themes.Fluent" Version="11.3.9" />
   </ItemGroup>
 
 </Project>
