--- a/GenFreeWin/GenFreeBaseClassesTests/GenFreeBaseClassesTests.csproj
+++ b/GenFreeWin/GenFreeBaseClassesTests/GenFreeBaseClassesTests.csproj
@@ -1,4 +1,4 @@
-<Project>
+﻿<Project>
   <Import Project="..\GenFreeWin.props" />
 
   <PropertyGroup>
@@ -8,8 +8,8 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-    <PackageReference Include="MSTest" Version="4.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="MSTest" Version="4.0.2" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
   </ItemGroup>
 
