--- a/GenFreeWin/GenFreeWinFormsTests/GenFreeWinFormsTests.csproj
+++ b/GenFreeWin/GenFreeWinFormsTests/GenFreeWinFormsTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project>
   <Import Project="..\GenFreeWin.props" />
   <PropertyGroup>
-    <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows;net481</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows;net481</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -11,8 +11,8 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-    <PackageReference Include="MSTest" Version="4.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="MSTest" Version="4.0.2" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
   </ItemGroup>
 
