--- a/CSharpBible/Games/Treppen.Base/Treppen.Base.csproj
+++ b/CSharpBible/Games/Treppen.Base/Treppen.Base.csproj
@@ -1,5 +1,6 @@
 <Project>
-	<Import Project="..\Application.props" />
+	<Import Project="..\Games_net.props" />
+	<Import Project="..\Packages.props" />
 	<PropertyGroup>
     <TargetFrameworks>net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
@@ -16,8 +17,10 @@
     <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\MathLibrary\MathLibrary.csproj" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Libraries\MathLibrary\MathLibrary.csproj" />
   </ItemGroup>
 </Project>
