--- a/JC-AMS/JC-AMS.props
+++ b/JC-AMS/JC-AMS.props
@@ -1,14 +1,14 @@
 <Project>
 	<PropertyGroup>
 		<GenerateAssemblyInfo>False</GenerateAssemblyInfo>
-		<TargetFrameworks>net462-windows;net472-windows;net48-windows;net481-windows;net60-windows;net70-windows</TargetFrameworks>
+		<TargetFrameworks>net462-windows;net472-windows;net48-windows;net481-windows;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows;net10.0-windows</TargetFrameworks>
 		<AssemblyName>$(MSBuildProjectName)</AssemblyName>
 		<Platforms>AnyCPU;x64</Platforms>
 		<BaseOutputPath>..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
 		<BaseIntermediateOutputPath>..\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
 		<IntermediateOutputPath Condition="'$(TargetFramework)'!='net60-windows' and '$(TargetFramework)'!='net70-windows'">..\..\obj\$(MSBuildProjectName)\</IntermediateOutputPath>
 		<IntermediateOutputPath Condition="'$(TargetFramework)'=='net60-windows' or '$(TargetFramework)'=='net70-windows'">..\..\obj.net\$(MSBuildProjectName)\</IntermediateOutputPath>
-		<LangVersion>9.0</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<DefineConstants>NULLABLE</DefineConstants>
 		<ImplicitUsings>disable</ImplicitUsings>
