--- a/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
+++ b/CSharpBible/Libraries/BaseLibTests/BaseLibTests.csproj
@@ -14,6 +14,12 @@
 		<TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
+	  <Compile Remove="Helper\ObjectHelperTests.cs" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="Helper\ObjectHelperTests.cs" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Include="MSTest" Version="4.0.2" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
 			<PrivateAssets>all</PrivateAssets>
