--- a/CSharpBible/Libraries/CommonDialogs/CommonDialogs_net.csproj
+++ b/CSharpBible/Libraries/CommonDialogs/CommonDialogs_net.csproj
@@ -6,8 +6,8 @@
 		<UseWPF>true</UseWPF>
 		<SignAssembly>true</SignAssembly>
 		<OutputType>Library</OutputType>
-		<Platforms>AnyCPU;x86</Platforms>
-	</PropertyGroup>
+    <Platforms>AnyCPU;x86;x64</Platforms>
+  </PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
@@ -16,11 +16,6 @@
   <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
     <TargetFrameworks>$(TargetFrameworks);net10.0-windows</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup>
-  </PropertyGroup>
-	<ItemGroup>
-	  <Compile Remove="Class1.cs" />
-	</ItemGroup>
 	<ItemGroup>
 	  <None Remove="*.bak" />
 	</ItemGroup>
