--- a/CSharpBible/Libraries/CommonDialogs/CommonDialogs_net.csproj
+++ b/CSharpBible/Libraries/CommonDialogs/CommonDialogs_net.csproj
@@ -19,4 +19,7 @@
 	<ItemGroup>
 	  <None Remove="*.bak" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Compile Remove="TaskDialog.cs" />
+	</ItemGroup>
 </Project>
