--- a/Transpiler_pp/TranspilerLib.DriveBASIC/TranspilerLib.DriveBASIC.csproj
+++ b/Transpiler_pp/TranspilerLib.DriveBASIC/TranspilerLib.DriveBASIC.csproj
@@ -13,6 +13,12 @@
     <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\TranspilerLib\TranspilerLib.csproj" />
   </ItemGroup>
 </Project>
