--- a/Transpiler_pp/Transpiler.props
+++ b/Transpiler_pp/Transpiler.props
@@ -3,7 +3,7 @@
 		<UpDir>..</UpDir>
 		<BaseOutputPath>$(UpDir)\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
 		<BaseIntermediateOutputPath>$(UpDir)\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-		<LangVersion>12.0</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<Nullable>enable</Nullable>
 		<!--<TreatWarningsAsErrors>true</TreatWarningsAsErrors>-->
 		<DefineConstants>NULLABLE</DefineConstants>
