--- a/CSharpBible/Games/Treppen.BaseTests/Treppen.BaseTests.csproj
+++ b/CSharpBible/Games/Treppen.BaseTests/Treppen.BaseTests.csproj
@@ -11,8 +11,8 @@
     <ProjectReference Include="..\Treppen.Base\Treppen.Base.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageReference Include="MSTest" Version="4.0.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="MSTest" />
   </ItemGroup>
   <ItemGroup>
     <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
