--- a/CSharpBible/Graphics/MVVM_Converter_ImgGrid2/MVVM_Converter_ImgGrid2.csproj
+++ b/CSharpBible/Graphics/MVVM_Converter_ImgGrid2/MVVM_Converter_ImgGrid2.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net9.0-windows</TargetFrameworks>
+  </PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net10.0-windows</TargetFrameworks>
+  </PropertyGroup>
   <ItemGroup>
 	  <None Remove="Resources\BIG_original.png" />
 	  <None Remove="Views\BIG_original.png" />
