--- a/CSharpBible/Graphics/ScreenX.BaseTests/ScreenX.BaseTests.csproj
+++ b/CSharpBible/Graphics/ScreenX.BaseTests/ScreenX.BaseTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project>
-	<Import Project="..\Application.props" />
+	<Import Project="..\Graphics_net.props" />
  <PropertyGroup>
-    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -10,11 +10,16 @@
   </PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '9.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net9.0</TargetFrameworks>
+  </PropertyGroup>
+  <PropertyGroup Condition="$([MSBuild]::VersionGreaterThanOrEquals('$(NETCoreSdkVersion)', '10.0.100'))">
+    <TargetFrameworks>$(TargetFrameworks);net10.0</TargetFrameworks>
+  </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
-    <PackageReference Include="MSTest" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4"/>
+    <PackageReference Include="MSTest" Version="4.0.2"/>
   </ItemGroup>
 	
   <ItemGroup>
