--- a/CSharpBible/Graphics/ScreenX.Base/ScreenX.Base.csproj
+++ b/CSharpBible/Graphics/ScreenX.Base/ScreenX.Base.csproj
@@ -1,5 +1,5 @@
 ﻿<Project>
-	<Import Project="..\Application.props" />
+	<Import Project="..\Graphics_net.props" />
   <PropertyGroup>
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
