--- a/CSharpBible/Games/MVVM_TiledDisplay_net/MVVM_TiledDisplay_net.csproj
+++ b/CSharpBible/Games/MVVM_TiledDisplay_net/MVVM_TiledDisplay_net.csproj
@@ -1,5 +1,6 @@
 ﻿<Project>
 	<Import Project="..\Games_net.props" />
+	<Import Project="..\Packages.props" />
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
@@ -18,7 +19,8 @@
 		<Page Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+		<PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" />
+		<!--Version="1.1.135"-->
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
