--- a/CSharpBible/Games/Game_BaseTests/Game_BaseTests.csproj
+++ b/CSharpBible/Games/Game_BaseTests/Game_BaseTests.csproj
@@ -1,5 +1,6 @@
 ﻿<Project>
 	<Import Project="..\Games.props" />
+	<Import Project="..\Packages.props" />
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net481;net48;net472;net462</TargetFrameworks>
@@ -7,15 +8,17 @@
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-		<PackageReference Include="MSTest" Version="4.0.2" />
-		<PackageReference Include="coverlet.collector" Version="6.0.4">
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="MSTest" />
+		<PackageReference Include="coverlet.collector">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Condition="'$(TargetFramework)'=='net462'" Include="System.ValueTuple" Version="4.6.1" />
+		<PackageReference Condition="'$(TargetFramework)'=='net462'" Include="System.ValueTuple" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
+		<ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
 		<ProjectReference Include="..\Game_Base\Game_Base.csproj" />
 	</ItemGroup>
 </Project>
