--- a/CSharpBible/Games/SharpHack.Console/SharpHack.Console.csproj
+++ b/CSharpBible/Games/SharpHack.Console/SharpHack.Console.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\Packages.props" />
 
-  <PropertyGroup>
+	<PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
