--- a/CSharpBible/Games/SharpHack.ViewModel/SharpHack.ViewModel.csproj
+++ b/CSharpBible/Games/SharpHack.ViewModel/SharpHack.ViewModel.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\Packages.props" />
 
-  <PropertyGroup>
+	<PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="CommunityToolkit.Mvvm" />
   </ItemGroup>
 
   <ItemGroup>
